--- a/site1/style.css
+++ b/site1/style.css
@@ -757,3 +757,15 @@ font-weight: 400;
 line-height: 54px;
 letter-spacing: 0.35px;
 }
+.product_content{
+    height: 1000px;
+}
+
+.products-header{
+    display: flex;
+    align-items: center;
+    margin-right: 1390px;
+    width: 1210px;
+    height: 150px;
+    background-color: #f8f3f4;
+}
