--- a/site1/style.css
+++ b/site1/style.css
@@ -691,9 +691,9 @@ letter-spacing: 0.35px;
 
 .products-header{
     display: flex;
+    
     align-items: center;
-    margin-right: 1390px;
-    width: 1210px;
+    width: 1610px;
     height: 150px;
     background-color: #f8f3f4;
 }
@@ -940,3 +940,110 @@ text-transform: uppercase;
 
 
 
+
+.newArrivals {
+    color: #f16d7f;
+font-size: 24px;
+font-weight: 400;
+text-transform: uppercase;
+    margin-left: 200px;
+}
+
+#breadcrumbs-one ul{
+     
+      margin: 0;
+      padding: 0;
+      list-style: none;
+    
+}
+ #breadcrumbs-one{
+     margin-left: 500px;
+      background: #eee;
+      border-width: 1px;
+      border-style: solid;
+      border-color: #f5f5f5 #e5e5e5 #ccc;
+  
+      border-radius: 5px;
+    
+      box-shadow: 0 0 2px rgba(0,0,0,.2);
+      /* Clear floats */
+      overflow: hidden;
+    }
+    
+    #breadcrumbs-one li{
+      float: left;
+    }
+    
+    #breadcrumbs-one a{
+      padding: .7em 1em .7em 2em;
+      float: left;
+      text-decoration: none;
+      color: #444;
+      position: relative;
+      text-shadow: 0 1px 0 rgba(255,255,255,.5);
+      background-color: #ddd;
+      background-image: -webkit-gradient(linear, left top, right bottom, from(#f5f5f5), to(#ddd));
+      background-image: -webkit-linear-gradient(left, #f5f5f5, #ddd);
+      background-image: -moz-linear-gradient(left, #f5f5f5, #ddd);
+      background-image: -ms-linear-gradient(left, #f5f5f5, #ddd);
+      background-image: -o-linear-gradient(left, #f5f5f5, #ddd);
+      background-image: linear-gradient(to right, #f5f5f5, #ddd);  
+    }
+    
+    #breadcrumbs-one li:first-child a{
+      padding-left: 1em;
+      -moz-border-radius: 5px 0 0 5px;
+      -webkit-border-radius: 5px 0 0 5px;
+      border-radius: 5px 0 0 5px;
+    }
+    
+    #breadcrumbs-one a:hover{
+      background: #fff;
+        color: red;
+        
+    }
+    
+    #breadcrumbs-one a::after,
+    #breadcrumbs-one a::before{
+      content: "";
+      position: absolute;
+      top: 50%;
+      margin-top: -1.5em;   
+      border-top: 1.5em solid transparent;
+      border-bottom: 1.5em solid transparent;
+      border-left: 1em solid;
+      right: -1em;
+    }
+    
+    #breadcrumbs-one a::after{ 
+      z-index: 2;
+      border-left-color: #ddd;  
+    }
+    
+    #breadcrumbs-one a::before{
+      border-left-color: #ccc;  
+      right: -1.1em;
+      z-index: 1; 
+    }
+    
+    #breadcrumbs-one a:hover::after{
+      border-left-color: #fff;
+    }
+    
+
+
+  
+    
+
+
+
+.content__products {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.picturs_products {
+    background-color:#e9e9e9;
+}
